--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Retag to latest
         uses: koraykoska/retag-docker-image@0.2.4
         with:
-          registry: some.registry.com
-          name: my-awesome-docker-image/my-package
-          old_tag: ghcr.io/${{ github.repository }}:$(git rev-parse --short HEAD)
-          new_tag: ghcr.io/${{ github.repository }}:${{ steps.get_release.outputs.tag_name }}
+          registry: ghcr.io
+          name: ${{ github.repository }}
+          old_tag: ${{ github.repository }}:$(git rev-parse --short HEAD)
+          new_tag: ${{ github.repository }}:${{ steps.get_release.outputs.tag_name }}
           username: github
           password: ${{ secrets.GITHUB_TOKEN }}
